src/objects/Case_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dummy_Case_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to create new Warranty cases from case plan assets</description>
        <inlineHelpText>used to create new Warranty cases from case plan assets</inlineHelpText>
        <label>Dummy Case Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Warranty Claim Authorization</value>
            </filterItems>
            <filterItems>
                <field>Case.Is_dummy_Case_for_creating_New_cases__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Plans</relationshipLabel>
        <relationshipName>Case_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <inlineHelpText>The template used to send email to contacts</inlineHelpText>
        <label>Email Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAH-Wty Auth for Serv Office</fullName>
                </value>
                <value>
                    <fullName>ATS-Wty Auth for Serv Office</fullName>
                </value>
                <value>
                    <fullName>QA ECM MMP Test</fullName>
                    <isActive>false</isActive>
                    <label>QA ECM MMP Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Templates__c</fullName>
        <inlineHelpText>The template used to send email to contacts. Please note that name entered in this field should exactly match the Email template</inlineHelpText>
        <label>Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Labor_Hours__c</fullName>
        <label>Estimated Labor Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_For__c</fullName>
        <label>Reason For</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <default>true</default>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QA Program</fullName>
                    <default>true</default>
                    <label>QA Program</label>
                </value>
                <value>
                    <fullName>Fix on Fail</fullName>
                </value>
                <value>
                    <fullName>Known Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Plan</label>
    <nameField>
        <label>Case Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>